<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="51dp"
    android:background="@drawable/corners_for_item">

    <ImageView
        android:id="@+id/ic_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        tools:srcCompat="@drawable/ic_mdi_bank"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="14dp"
        android:background="#F2F2F2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="12dp"
            android:text="@string/currency"
            android:textColor="#4F4F4F"
            android:alpha="0.8"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_view_currency_buy"
            android:layout_toEndOf="@+id/text_view_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="57dp"
            android:layout_marginTop="12dp"
            android:text="@string/currency_buy"
            android:textColor="#4F4F4F"
            android:alpha="0.8"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_view_currency_sell"
            android:layout_toEndOf="@+id/text_view_currency_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="12dp"
            android:text="@string/currency_sell"
            android:textColor="#4F4F4F"
            android:alpha="0.8"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/currency_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_currency"
            android:layout_marginStart="21dp"
            android:layout_marginTop="4dp"
            android:textColor="#333333"
            android:textSize="20sp"
            tools:text="1 RUB" />

        <TextView
            android:id="@+id/currency_buy_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_currency_buy"
            android:layout_alignStart="@+id/text_view_currency_buy"
            android:layout_marginTop="4dp"
            android:textColor="#4F4F4F"
            android:textSize="20sp"
            tools:text="0.132" />

        <TextView
            android:id="@+id/currency_sell_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_currency_sell"
            android:layout_alignStart="@+id/text_view_currency_sell"
            android:layout_marginTop="4dp"
            android:textColor="#4F4F4F"
            android:textSize="20sp"
            tools:text="0.132"
            android:layout_marginBottom="23dp"/>
    </RelativeLayout>




</LinearLayout>